# CMake-Cpp-Qt-Application

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml
App/: CMakeLists.txt
App/src/: main.cpp
cmake/: utilities.cmake
include/: mainWindow.h
src/: mainWindow.cpp
